# BastionVault

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .taurignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  agent.md  build.rs  roadmap.md
.cargo/: config.toml
.claude/: launch.json
.github/workflows/: container-image.yml  deploy-website.yml  deploy-website.yml.disabled  rust.yml  rust.yml.disabled  website.yml.disabled
config/: dev.hcl  ha-cluster.hcl  single-node.hcl
crates/bastion-plugin-sdk/: Cargo.toml
crates/bastion-plugin-sdk/examples/: echo.rs  kv_cache.rs  totp_form_hook.rs  totp_surface.rs
crates/bastion-plugin-sdk/src/: app.rs  host.rs  lib.rs
crates/bastion-plugin-testkit/: Cargo.toml
crates/bastion-plugin-testkit/src/: app.rs  hooks.rs  lib.rs  tests.rs
crates/bv-client/: Cargo.toml
crates/bv-client/src/: backend.rs  discovery.rs  error.rs  health.rs  lib.rs  remote.rs  surface.rs  sysproxy.rs  tls.rs  types.rs
crates/bv-client/tests/: cluster_discovery_e2e.rs
crates/bv-plugin-manifest/: Cargo.toml
crates/bv-plugin-manifest/src/: lib.rs
crates/bv-plugin-pack/: Cargo.toml
crates/bv-plugin-pack/src/: main.rs
crates/bv_crypto/: Cargo.toml
crates/bv_crypto/src/: bvrg.rs  error.rs  lib.rs
crates/bv_crypto/src/aead/: chacha20_poly1305.rs  mod.rs
crates/bv_crypto/src/envelope/: mod.rs
crates/bv_crypto/src/kem/: ml_kem_768.rs  mod.rs
crates/bv_crypto/src/signature/: ml_dsa_44.rs  ml_dsa_65.rs  ml_dsa_87.rs  mod.rs
crates/bv_crypto/tests/: bvrg_roundtrip.rs
crates/bv_plugin_surface/: Cargo.toml
crates/bv_plugin_surface/src/: lib.rs
deploy/compose/: cluster.yml  standalone.yml
deploy/container/: Containerfile  Containerfile.debug  README.md
docs/: README.md  _navbar.md  _sidebar.md  administration.md  api.md  authentication.md  cli-reference.md  cluster-client-discovery.md  configuration.md  crypto.md  design.md  docusaurus.config.js  ferrogate-machine-auth.md  gui.md  hsm.md  index.html  install.md  kv-environments.md  package-lock.json  package.json  policy-builder-validator.md  quick-start.md  req.md  rustion-integration.md  secret-engines.md  security-structure.md  serve-docs.bat  serve-docs.sh  ssh-login-brokering.md  ssh-secret-engine.md
docs/docs/: administration.md  api.md  authentication.md  cli-reference.md  (+9 more)
dynamic-engine-plugins/: README.md
features/: approle-machine-env.md  asset-groups.md  audit-logging.md  batch-operations.md  caching.md  cloud-storage-backend.md  compliance-reporting.md  connect-only-access.md  default-resource-account.md  dos-abuse-protection.md  dynamic-secrets.md  file-resources.md  gui-dashboard-redesign.md  hiqlite-ha-storage.md  hsm-support.md  identity-groups.md  identity-provider.md  import-export-backup-restore.md  import-export-module.md  kubernetes-integration.md  kv-environments.md  ldap-secret-engine.md  machine-authentication.md  namespaces-multitenancy.md  notifications.md  oidc-auth.md  packaging-client-binaries.md  packaging-distribution-website.md  packaging-podman-server.md  per-user-scoping.md  pki-acme.md  pki-key-management-and-lifecycle.md  pki-secret-engine.md  plugin-app-extensions.md  plugin-extensibility.md  plugin-system.md  plugin-testing.md  pmp-import.md  policy-builder-validator.md  resource-connect.md  (+15 more)
gui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/installers/linux/: Dockerfile  README.md  build-in-docker.sh  postinst  prerm
gui/src-tauri/installers/macos/: README.md  build-gui-pkg.sh  distribution.xml
gui/src-tauri/installers/windows/: README.md  build-in-vm.sh  build.ps1  provision.ps1
gui/src-tauri/installers/windows/packer/: autounattend.xml  windows11-arm64.pkr.hcl
gui/src-tauri/src/: backend.rs  error.rs  lib.rs  local_keystore.rs  main.rs  menu.rs  plugin_apps.rs  plugin_hooks.rs  preferences.rs  secure_store.rs  state.rs  yubikey_bridge.rs
gui/src-tauri/src/commands/: approle.rs  asset_groups.rs  auth.rs  backup.rs  capabilities.rs  cert_lifecycle.rs  cloud_target.rs  connect.rs  connection.rs  dos.rs  exchange.rs  ferrogate.rs  fido2.rs  fido2_native.rs  files.rs  groups.rs  ldap.rs  mod.rs  namespaces.rs  notifications.rs  oidc.rs  pki.rs  plugin_surface.rs  plugins.rs  policies.rs  resources.rs  rustion.rs  scheduled_exports.rs  secrets.rs  sharing.rs  ssh.rs  sso_admin.rs  system.rs  totp.rs  users.rs  vaults.rs  yubikey.rs
gui/src-tauri/src/embedded/: mod.rs
gui/src-tauri/src/session/: mod.rs  rdp.rs  ssh.rs
gui/wasm/rdp-replay/: Cargo.toml
gui/wasm/rdp-replay/src/: lib.rs
roadmaps/: README.md  hiqlite-default-ha-storage.md  notifications.md  packaging-and-distribution.md  plugin-app-extensions.md  plugin-extensibility-redesign.md  policy-builder-validator.md  post-quantum-crypto-migration.md  post-quantum-crypto-progress.md  rqlite-default-ha-storage.md  tauri-gui-fido2.md  vault-cluster-client-discovery.md
scripts/: prune-incremental.sh  rustion-master-bootstrap.sh  win-env.sh
src/: context.rs  core.rs  errors.rs  handler.rs  lib.rs  logging.rs  module_manager.rs  mount.rs  router.rs  server_info.rs  shamir.rs  stats.rs  test_utils.rs
tests/: cucumber_hiqlite.rs  hiqlite_ha_fault_injection.rs  test_cert_lifecycle_basic.rs  test_cert_lifecycle_plugin.rs  test_cert_lifecycle_scheduler.rs  test_default_logical.rs  test_pki_auto_tidy.rs  test_pki_cert_key_lifecycle.rs  test_pki_chain_import.rs  test_pki_composite.rs  test_pki_emission_control.rs  test_pki_engine.rs  test_pki_intermediate_import.rs  test_pki_issuer_keys.rs  test_pki_key_reuse.rs  test_pki_managed_keys.rs  test_pki_phase5.rs  test_pki_phase5_1.rs  test_pki_phase5_2.rs  test_pki_phase5_3.rs  test_pki_phase5_5.rs  test_pki_pqc.rs  test_pki_role_write_repro.rs  test_pki_tidy.rs  test_plugin_testkit_parity.rs  test_rustion_master_pki_issue.rs  test_ssh_engine.rs  test_ssh_otp.rs  test_ssh_pqc.rs
(+623 files in other folders)
