[package]
name = "bastion_vault"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"
description = """
BastionVault is a powerful identity-based secrets management software, providing features such as
cryptographic key management, encryption as a service, public key cryptography, certificates management, identity credentials
management and so forth.

BastionVault is a fork of RustyVault and reflects a different direction for the library.

BastionVault's RESTful API is designed to be fully compatible with Hashicorp Vault.
"""
repository = "https://github.com/ffquintella/BastionVault"
documentation = "https://docs.rs/bastion_vault/latest/bastion_vault/"
build = "build.rs"
exclude = [
    "docs/*",
]

[workspace]
members = [
    ".",
    "crates/bv_crypto",
    "gui/src-tauri",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bv_crypto = { path = "crates/bv_crypto" }
aes-gcm = "0.10"
anyhow = { version = "^1.0" }
thiserror = { version = "^2.0" }
serde = { version = "^1.0", features = ["derive", "rc", "alloc"] }
serde_derive = "^1.0"
serde_json = "^1.0"
serde_bytes = "0.11"
serde_yaml = "0.9"
go-defer = "^0.1"
rand = "^0.10"
derivative = "2.2.0"
enum-map = "2.7.3"
strum = { version = "0.28", features = ["derive"] }
strum_macros = "0.28"
radix_trie = "0.3.0"
lazy_static = "1.5.0"
regex = "1.12"
clap = { version = "4.6", features = ["wrap_help", "derive", "env", "suggestions"] }
sysexits = { version = "0.13", features = ["std"] }
build-time = "0.1"
hcl-rs = "0.19"
actix-web = { version = "4.13", features = ["rustls-0_23"] }
actix-tls = "3.5"
actix-rt = "2.11"
log = "0.4"
env_logger = "0.11"
hex = "0.4"
humantime = "2.3"
as-any = "0.3.2"
pem = "3.0"
chrono = "0.4"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
diesel = { version = "2.3.7", features = ["mysql", "r2d2"], optional = true }
r2d2 = { version = "0.8.10", optional = true }
r2d2-diesel = { version = "1.0.0", optional = true }
hiqlite = { version = "0.13", optional = true, features = ["sqlite", "dlock"] }
cryptr = { version = "0.10", optional = true, default-features = false }
# Cloud Storage Targets — Phase 2b: S3 via rusty-s3 (URL signing +
# XML parsing only, ~15 transitive deps). HTTP is handled by the
# existing `ureq` dep, so enabling `cloud_s3` does not pull in
# reqwest / hyper / aws-sdk-*. See `features/cloud-storage-backend.md`.
rusty-s3 = { version = "0.9", optional = true }
# Now non-optional: SAML Phase 3 (`src/modules/credential/saml/`) uses
# it to parse IdP responses. `cloud_s3` also consumes it, but gating
# it on that feature would force a feature-flag dance for the SAML
# code path — keeping it always-on is simpler and the transitive
# footprint is small (~3 crates).
quick-xml = { version = "0.36" }
# OS keychain writer for `credentials_ref = "keychain:..."`. Uses the
# platform-native secret store on macOS (Keychain) / Windows
# (Credential Vault) / Linux (Secret Service). Feature-gated so
# server-only operators who never use `keychain:` refs don't carry
# the extra transitive deps (notably `dbus` on Linux).
keyring = { version = "3", optional = true }
bcrypt = "0.19"
url = "2.5"
ureq = { version = "3.3", features = ["json"] }
http = "1"
rustls = { version = "0.23.37", features = ["aws_lc_rs"] }
rustls-pemfile = "2.2"
webpki-roots = { version = "1.0", default-features = true }
glob = "0.3"
base64 = "0.22"
ipnetwork = { version = "0.21", features = ["serde"] }
blake2b_simd = "1.0"
derive_more = "2.1.1"
dashmap = "6.1"
tokio = { version = "1.51", features = ["rt-multi-thread", "macros"] }
ctor = "0.9.1"
better_default = "1.0.5"
prometheus-client = "0.24.1"
sysinfo = "0.38.4"
prettytable = "0.10"
rpassword = "7.4"
async-trait = "0.1"
stretto = "0.8"
priority-queue = "2.7"
crossbeam-channel = "0.5"
maybe-async = { version = "0.2", optional = false }
lockfile = "0.4.0"
arc-swap = "1"
blake3 = "1.8"
hmac = "0.13"
# OIDC auth backend. Pulls in its own reqwest-based http client for
# discovery + JWKS + token exchange; reqwest is already transitively
# in the tree (hiqlite), so the marginal dep cost is the openidconnect
# crate itself + a small jwt transitive closure.
openidconnect = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
sha1 = "0.11"
sha2 = "0.11"
# SAML 2.0 auth backend (Phase 3) — pure-Rust stack instead of
# `samael`'s libxml2/libxmlsec1 C deps. `rsa` verifies IdP-signed
# assertions, `x509-parser` pulls the public key out of the
# configured PEM cert, `flate2` handles the HTTP-Redirect binding's
# DEFLATE envelope. `rsa 0.9` expects `digest 0.10` which is what
# the aliased `sha1-saml` / `sha2-saml` deps below pull in — the
# project's main `sha1 = "0.11"` and `sha2 = "0.11"` deps use
# `digest 0.11` and are incompatible with the `rsa::signature::Verifier`
# trait bounds. Renaming keeps the two coexistent.
rsa = "0.9"
x509-parser = "0.17"
flate2 = "1.0"
sha1-saml = { package = "sha1", version = "0.10", features = ["oid"] }
sha2-saml = { package = "sha2", version = "0.10", features = ["oid"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
zstd = "0.13"
# Exchange (import/export) module: password-encrypted .bvx files.
# Argon2id is the OWASP-recommended memory-hard KDF; XChaCha20-Poly1305
# pairs with it for AEAD with a 192-bit nonce so random-nonce collisions
# are not a concern even across millions of exports. See
# `features/import-export-module.md`.
argon2 = { version = "0.5", default-features = false, features = ["alloc", "std", "password-hash"] }
chacha20poly1305 = "0.10"

[build-dependencies]
toml = "1.1.2"

[dev-dependencies]
serial_test = "3.4"
cucumber = "0.21"

[features]
default = ["storage_hiqlite"]
storage_mysql = ["diesel", "r2d2", "r2d2-diesel"]
storage_hiqlite = ["hiqlite", "cryptr"]
sync_handler = ["maybe-async/is_sync"]
# Cloud Storage Targets for the Encrypted File backend.
# See `features/cloud-storage-backend.md`. Default build stays lean —
# operators who don't need cloud targets pay no compile / binary cost.
cloud_s3 = ["rusty-s3"]
# OneDrive target pulls no new external deps — reuses `ureq` for HTTP,
# `serde_json` for Graph API JSON, and the shared OAuth infra from
# `file/oauth.rs`. The feature flag still exists so operators who
# don't need OneDrive can opt out of compiling the module + its tests.
cloud_onedrive = []
# Google Drive target. Like OneDrive, pulls no new external deps —
# reuses `ureq` + `serde_json` + the shared OAuth infra.
cloud_gdrive = []
# Dropbox target. Zero new external deps — reuses `ureq` +
# `serde_json` + the shared OAuth infra.
cloud_dropbox = []
cloud_keychain = ["keyring"]
cloud_targets = ["cloud_s3", "cloud_onedrive", "cloud_gdrive", "cloud_dropbox", "cloud_keychain"]

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.foreign-types]
version = "0.5.0"

[dependencies.libc]
version = "0.2"

[lints.clippy]
result_large_err = "allow"
ptr_arg = "allow"
let_and_return = "allow"
should_implement_trait = "allow"
new_without_default = "allow"
field_reassign_with_default = "allow"
await_holding_lock = "allow"
too_many_arguments = "allow"
unnecessary_unwrap = "allow"
collapsible_match = "allow"
large_enum_variant = "allow"
unnecessary_map_or = "allow"

[[bin]]
name = "bvault"
path = "bin/bastion_vault.rs"

[[test]]
name = "test_default_logical"
path = "tests/test_default_logical.rs"

[[test]]
name = "cucumber_hiqlite"
harness = false
path = "tests/cucumber_hiqlite.rs"
