[package]
name = "bastion_vault"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"
description = """
BastionVault is a powerful identity-based secrets management software, providing features such as
cryptographic key management, encryption as a service, public key cryptography, certificates management, identity credentials
management and so forth.

BastionVault is a fork of RustyVault and reflects a different direction for the library.

BastionVault's RESTful API is designed to be fully compatible with Hashicorp Vault.
"""
repository = "https://github.com/ffquintella/BastionVault"
documentation = "https://docs.rs/bastion_vault/latest/bastion_vault/"
build = "build.rs"
exclude = [
    "docs/*",
]

[workspace]
members = [
    ".",
    "crates/bv_crypto",
    "crates/bastion-plugin-sdk",
    "crates/bv-plugin-pack",
    "gui/src-tauri",
]
# `plugins-ext/` is a git submodule with its own Cargo workspace
# (BastionVault-Plugins, the Phase-4 reference plugins). It depends on
# `crates/bastion-plugin-sdk` via a relative path, but is built
# separately — its build artefacts shouldn't pollute the host's
# `target/`, and its release-profile (panic=abort, opt=s) shouldn't
# leak into our normal builds.
exclude = ["plugins-ext"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bv_crypto = { path = "crates/bv_crypto" }
aes-gcm = "0.10"
anyhow = { version = "^1.0" }
thiserror = { version = "^2.0" }
serde = { version = "^1.0", features = ["derive", "rc", "alloc"] }
serde_derive = "^1.0"
serde_json = "^1.0"
serde_bytes = "0.11"
serde_yaml = "0.9"
go-defer = "^0.1"
rand = "^0.10"
derivative = "2.2.0"
enum-map = "2.7.3"
strum = { version = "0.28", features = ["derive"] }
strum_macros = "0.28"
radix_trie = "0.3.0"
lazy_static = "1.5.0"
regex = "1.12"
clap = { version = "4.6", features = ["wrap_help", "derive", "env", "suggestions"] }
sysexits = { version = "0.13", features = ["std"] }
build-time = "0.1"
hcl-rs = "0.19"
actix-web = { version = "4.13", features = ["rustls-0_23"] }
actix-tls = "3.5"
actix-rt = "2.11"
log = "0.4"
env_logger = "0.11"
hex = "0.4"
humantime = "2.3"
as-any = "0.3.2"
pem = "3.0"
chrono = "0.4"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
diesel = { version = "2.3.7", features = ["mysql", "r2d2"], optional = true }
r2d2 = { version = "0.8.10", optional = true }
r2d2-diesel = { version = "1.0.0", optional = true }
hiqlite = { version = "0.13", optional = true, features = ["sqlite", "dlock"] }
cryptr = { version = "0.10", optional = true, default-features = false }
# Cloud Storage Targets — Phase 2b: S3 via rusty-s3 (URL signing +
# XML parsing only, ~15 transitive deps). HTTP is handled by the
# existing `ureq` dep, so enabling `cloud_s3` does not pull in
# reqwest / hyper / aws-sdk-*. See `features/cloud-storage-backend.md`.
rusty-s3 = { version = "0.9", optional = true }
# Now non-optional: SAML Phase 3 (`src/modules/credential/saml/`) uses
# it to parse IdP responses. `cloud_s3` also consumes it, but gating
# it on that feature would force a feature-flag dance for the SAML
# code path — keeping it always-on is simpler and the transitive
# footprint is small (~3 crates).
quick-xml = { version = "0.36" }
# OS keychain writer for `credentials_ref = "keychain:..."`. Uses the
# platform-native secret store on macOS (Keychain) / Windows
# (Credential Vault) / Linux (Secret Service). Feature-gated so
# server-only operators who never use `keychain:` refs don't carry
# the extra transitive deps (notably `dbus` on Linux).
keyring = { version = "3", optional = true }
bcrypt = "0.19"
url = "2.5"
ureq = { version = "3.3", features = ["json"] }
http = "1"
rustls = { version = "0.23.37", features = ["aws_lc_rs"] }
rustls-pemfile = "2.2"
webpki-roots = { version = "1.0", default-features = true }
glob = "0.3"
base64 = "0.22"
ipnetwork = { version = "0.21", features = ["serde"] }
blake2b_simd = "1.0"
derive_more = "2.1.1"
dashmap = "6.1"
tokio = { version = "1.51", features = ["rt-multi-thread", "macros", "process", "time", "io-util"] }
ctor = "0.9.1"
better_default = "1.0.5"
prometheus-client = "0.24.1"
sysinfo = "0.38.4"
prettytable = "0.10"
rpassword = "7.4"
async-trait = "0.1"
stretto = "0.8"
priority-queue = "2.7"
crossbeam-channel = "0.5"
maybe-async = { version = "0.2", optional = false }
lockfile = "0.4.0"
arc-swap = "1"
blake3 = "1.8"
hmac = "0.13"
# OIDC auth backend. Pulls in its own reqwest-based http client for
# discovery + JWKS + token exchange; reqwest is already transitively
# in the tree (hiqlite), so the marginal dep cost is the openidconnect
# crate itself + a small jwt transitive closure.
openidconnect = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
sha1 = "0.11"
sha2 = "0.11"
# SAML 2.0 auth backend (Phase 3) — pure-Rust stack instead of
# `samael`'s libxml2/libxmlsec1 C deps. `rsa` verifies IdP-signed
# assertions, `x509-parser` pulls the public key out of the
# configured PEM cert, `flate2` handles the HTTP-Redirect binding's
# DEFLATE envelope. `rsa 0.9` expects `digest 0.10` which is what
# the aliased `sha1-saml` / `sha2-saml` deps below pull in — the
# project's main `sha1 = "0.11"` and `sha2 = "0.11"` deps use
# `digest 0.11` and are incompatible with the `rsa::signature::Verifier`
# trait bounds. Renaming keeps the two coexistent.
rsa = "0.9"
x509-parser = { version = "0.17", features = ["verify"] }
flate2 = "1.0"
sha1-saml = { package = "sha1", version = "0.10", features = ["oid"] }
sha2-saml = { package = "sha2", version = "0.10", features = ["oid"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
zstd = "0.13"
# Exchange (import/export) module: password-encrypted .bvx files.
# Argon2id is the OWASP-recommended memory-hard KDF; XChaCha20-Poly1305
# pairs with it for AEAD with a 192-bit nonce so random-nonce collisions
# are not a concern even across millions of exports. See
# `features/import-export-module.md`.
argon2 = { version = "0.5", default-features = false, features = ["alloc", "std", "password-hash"] }
chacha20poly1305 = "0.10"
# Scheduled-exports cron parser. Pure-Rust, no system deps. See
# `features/scheduled-exports.md`.
cron = "0.16"
# `uuid` is already a transitive dep via webauthn-rs; promote to a direct
# dep for the scheduled-exports id generation.
uuid = { version = "1", features = ["v4"] }
# Plugin system v1: WASM runtime via wasmtime. Pure-Rust JIT with fuel
# metering + memory limits + linker-based host capability injection. See
# `features/plugin-system.md`. We disable the cranelift parallel feature
# to keep the dep tree small; cache + pooling-allocator are off until the
# plugin system actually needs them.
wasmtime = { version = "27", default-features = false, features = ["cranelift", "runtime", "wat", "async"] }
# PKI Secret Engine (Phase 1): pure-Rust X.509 + CRL stack. `rcgen`
# handles DER encoding for certs / CSRs / CRLs and provides a `SigningKey`
# trait we plug post-quantum signers into in Phase 2. We use the default
# feature set, which selects `ring` (pure Rust + asm, no C system deps)
# as the classical crypto provider — explicitly *not* `aws_lc_rs`, since
# the build must stay free of `openssl-sys` and `aws-lc-sys`. `time` is
# rcgen's exposed timestamp type; already transitively in the tree.
# See `features/pki-secret-engine.md`.
rcgen = { version = "0.14", features = ["x509-parser"] }
time = { version = "0.3", default-features = false, features = ["std"] }
# PKI Phase 2 (PQC roles): ML-DSA-44/65/87 certs and CRLs. `rcgen` 0.14
# gates its built-in ML-DSA support behind `aws_lc_rs_unstable`, which
# pulls `aws-lc-sys` — forbidden by `features/pki-secret-engine.md`.
# So Phase 2 assembles `TBSCertificate` / `TBSCertList` directly with
# `x509-cert` + `der` and signs the DER bytes with `fips204`. Pure Rust,
# no C system deps. `const-oid` (already transitive via `der`) carries
# the algorithm OIDs.
x509-cert = { version = "0.2", default-features = false, features = ["builder", "pem", "std"] }
fips204 = { version = "0.4", default-features = false, features = ["default-rng", "ml-dsa-44", "ml-dsa-65", "ml-dsa-87"] }
const-oid = { version = "0.9", features = ["db"] }
# Phase 5.3: PKCS#8 (`PrivateKeyInfo`) emit/parse for ML-DSA private keys.
# Already transitive in the dep tree via `der` / `x509-cert` / `rsa` / `p256`,
# but promoted to a direct dep so the PKI module's `MlDsaSigner::to_pkcs8_pem`
# / `from_pkcs8_pem` round-trip uses the standard wrapper. The `pem` feature
# pulls in the PEM encode/decode helpers.
pkcs8 = { version = "0.10", features = ["pem", "alloc"] }
# SSH Secret Engine (Phase 1, CA mode): OpenSSH key + certificate
# parsing / encoding / signing on a pure-Rust stack (RustCrypto
# under the hood). `alloc` for heap, `ed25519` for the default CA
# algorithm, `encryption` for armored OpenSSH private-key handling.
# Phases 2 (OTP) and later may add `rsa` / `p256` / `p384` features.
ssh-key = { version = "0.6", default-features = false, features = ["alloc", "ed25519", "encryption"] }
ssh-encoding = "0.2"

[build-dependencies]
toml = "1.1.2"

[dev-dependencies]
serial_test = "3.4"
cucumber = "0.21"
# Pulled in for the Phase-3 composite-signature test so we can verify the
# classical ECDSA-P256 half of the composite signature directly. p256 +
# sha2 are already in the dep tree transitively; promoting them keeps the
# test self-contained without inflating the main build's surface.
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.11"
# Phase 5.3 test parses an emitted PQC PKCS#8 PEM directly to confirm the
# inner OCTET STRING really carries the 32-byte ML-DSA seed.
pkcs8 = { version = "0.10", features = ["pem", "alloc"] }
# WebAssembly text-format parser. Used only by plugin runtime tests so we
# can compile small WAT modules inline rather than checking in pre-built
# `.wasm` blobs.
wat = "1"

[features]
default = ["storage_hiqlite"]
storage_mysql = ["diesel", "r2d2", "r2d2-diesel"]
storage_hiqlite = ["hiqlite", "cryptr"]
sync_handler = ["maybe-async/is_sync"]
# Cloud Storage Targets for the Encrypted File backend.
# See `features/cloud-storage-backend.md`. Default build stays lean —
# operators who don't need cloud targets pay no compile / binary cost.
cloud_s3 = ["rusty-s3"]
# OneDrive target pulls no new external deps — reuses `ureq` for HTTP,
# `serde_json` for Graph API JSON, and the shared OAuth infra from
# `file/oauth.rs`. The feature flag still exists so operators who
# don't need OneDrive can opt out of compiling the module + its tests.
cloud_onedrive = []
# Google Drive target. Like OneDrive, pulls no new external deps —
# reuses `ureq` + `serde_json` + the shared OAuth infra.
cloud_gdrive = []
# Dropbox target. Zero new external deps — reuses `ureq` +
# `serde_json` + the shared OAuth infra.
cloud_dropbox = []
cloud_keychain = ["keyring"]
cloud_targets = ["cloud_s3", "cloud_onedrive", "cloud_gdrive", "cloud_dropbox", "cloud_keychain"]
# PKI Phase 3 — composite / hybrid signatures (ECDSA-P256 + ML-DSA-65).
# Off by default. The IETF draft `draft-ietf-lamps-pq-composite-sigs`
# is still moving (random salt, pre-hash construction, OID arc have
# all churned across recent revisions), so the engine ships this as
# an opt-in preview rather than a stable interop guarantee. See
# `features/pki-secret-engine.md`.
pki_pqc_composite = []

# SSH Phase 3 — post-quantum SSH certificates (ML-DSA-65). Off by
# default because OpenSSH does not yet ship native support for
# `ssh-mldsa65@openssh.com`, so certs minted under this feature only
# verify in clients that have implemented the draft wire format.
# Operators wiring an ML-DSA-aware Rust SSH client into automation
# pipelines opt in via this flag; everyone else pays nothing. See
# `features/ssh-secret-engine.md` Phase 3.
ssh_pqc = []

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.foreign-types]
version = "0.5.0"

[dependencies.libc]
version = "0.2"

[lints.clippy]
result_large_err = "allow"
ptr_arg = "allow"
let_and_return = "allow"
should_implement_trait = "allow"
new_without_default = "allow"
field_reassign_with_default = "allow"
await_holding_lock = "allow"
too_many_arguments = "allow"
unnecessary_unwrap = "allow"
collapsible_match = "allow"
large_enum_variant = "allow"
unnecessary_map_or = "allow"

[[bin]]
name = "bvault"
path = "bin/bastion_vault.rs"

# Phase 2 of the SSH secret engine: target-host helper that PAM's
# `pam_exec` invokes to validate an OTP against `/v1/ssh/verify`.
# Tiny binary, deliberately separate from the server so operators can
# ship it to managed hosts without dragging the full server crate.
[[bin]]
name = "bv-ssh-helper"
path = "bin/bv_ssh_helper.rs"

[[test]]
name = "test_default_logical"
path = "tests/test_default_logical.rs"

[[test]]
name = "cucumber_hiqlite"
harness = false
path = "tests/cucumber_hiqlite.rs"
