[package]
name = "bastion-plugin-testkit"
version = "0.1.0"
edition = "2021"
description = "Unit-test harness for BastionVault WASM plugins: in-memory mock host mirroring the `bv.*` ABI, form-hook runner, and conformance fixtures. See features/plugin-testing.md."
license = "Apache-2.0"
repository = "https://github.com/ffquintella/BastionVault"

# Plugin authors add this as a dev-dependency next to
# `bastion-plugin-sdk` and drive their compiled `.wasm` artifact
# through the same ABI the BastionVault server uses — without booting
# a vault. The host repo also dev-depends on it for ABI-parity tests
# (tests/test_plugin_testkit_parity.rs), which is what keeps this
# crate honest against `src/plugins/runtime.rs`.

[dependencies]
# Same major as the host runtime (root Cargo.toml). `wat` is enabled so
# fixtures can be authored as WebAssembly text and fed straight to
# `Module::new`.
wasmtime = { version = "46", default-features = false, features = ["cranelift", "runtime", "wat"] }
serde_json = "1"
sha2 = "0.11"
base64 = "0.22"
thiserror = "2"
