[package]
name = "bv-client"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Client crate for BastionVault: HTTP client + Backend trait used by the GUI to talk to a BastionVault server. Has zero dependencies on the bastion_vault server crate."

[dependencies]
async-trait = "0.1"
http = "1"
log = "0.4"
# Percent-encode resource/key names into URL path segments so names
# containing spaces or other reserved characters don't break `http::Uri`
# parsing. The server (Actix) percent-decodes the path, so it round-trips.
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# `socks-proxy` lets a SOCKS proxy from the system settings actually
# connect; `win-system-proxy` reads the WinINET registry so the
# "use system proxy" toggle honours Windows' proxy on that platform.
ureq = { version = "3.3", features = ["json", "socks-proxy", "win-system-proxy"] }
rustls = { version = "0.23.37", features = ["aws_lc_rs"] }
# `rt` for `spawn_blocking` (keeps the sync ureq call off the async
# executor) and `sync` for the async mutex that serializes in-session
# failover re-probes (held across an `.await`, so a std mutex won't do).
# Consumers bring their own runtime.
tokio = { version = "1", features = ["rt", "sync"] }
# Plugin Extensibility v1: shared SurfaceManifest types and
# ActiveSurfaceBundle envelope. Consumed by the surface module.
bv_plugin_surface = { path = "../bv_plugin_surface" }
sha2 = "0.11"
hex = "0.4"
# Async SRV resolution for cluster discovery. tokio-runtime feature
# uses the same tokio handle the consumer already brings; no extra
# runtime is spawned. Pinned to match the root crate so cargo
# dedupes a single resolver build.
hickory-resolver = { version = "0.26", default-features = false, features = ["system-config", "tokio"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
