[package]
name = "bv_plugin_manifest"
version = "0.1.0"
edition = "2021"
description = "Shared plugin manifest types + canonical signing-message construction, used by the host verifier and the bv-plugin-pack signer so a signed bundle verifies byte-for-byte."
license = "Apache-2.0"
repository = "https://github.com/ffquintella/BastionVault"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
bv_plugin_surface = { path = "../bv_plugin_surface" }
