[package]
name = "bv_crypto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Small, auditable cryptographic primitives for BastionVault migrations."

[features]
default = ["ml-kem-768", "ml-dsa-44", "ml-dsa-65", "ml-dsa-87"]
ml-kem-768 = ["dep:ml-kem"]
# ML-DSA security levels. Each turns on the corresponding fips204 feature.
# The PKI engine's Phase 2 PQC roles use 65 by default; 44 and 87 are
# offered for operators who need a smaller signature or higher security
# margin respectively.
ml-dsa-44 = ["dep:fips204", "fips204/ml-dsa-44"]
ml-dsa-65 = ["dep:fips204", "fips204/ml-dsa-65"]
ml-dsa-87 = ["dep:fips204", "fips204/ml-dsa-87"]

[dependencies]
chacha20poly1305 = { version = "0.10", features = ["std"] }
fips204 = { version = "0.4.6", optional = true, default-features = false, features = ["default-rng"] }
ml-kem = { version = "0.3.0-rc.2", features = ["getrandom", "zeroize"], optional = true }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
# Ed25519 half of the hybrid signature used by the Rustion-integration
# BVRG-v1 envelope (see src/bvrg.rs). Pure-Rust, already in the workspace
# dep tree via the host crate's transit + SSH stacks.
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core", "zeroize"] }
# CBOR encoder/decoder for the BVRG-v1 payload. Small, pure-Rust,
# no-build-script — picked over the deprecated `serde_cbor` and the
# serde-less `minicbor`.
ciborium = "0.2"
# SHA-256 over the BVRG-v1 ciphertext for the signature's "tbs"
# message. Mirrors the workspace's `sha2` pin.
sha2 = "0.11"

[lints.clippy]
result_large_err = "allow"
