[package]
name = "bv_plugin_surface"
version = "0.1.0"
edition = "2021"
description = "BastionVault plugin surface manifest types — shared between server, bv-client, and the Tauri GUI"
license = "MPL-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
hex = "0.4"
thiserror = "2"

[dev-dependencies]
serde_json = "1"
